syntax = "proto3";
package arustio.meta;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// API allowing clients to send MetaCmds to the leader
service MetaApi {
  // Apply a metadata operation
  rpc Apply(MetaCmd) returns (google.protobuf.Empty);
  // Get the current leader info
  rpc GetLeader (GetLeaderRequest) returns (GetLeaderResponse);
  // Read Operations
  rpc GetFileMeta (GetFileMetaRequest) returns (GetFileMetaResponse);
  // Get the block node list
  rpc GetBlockNodes (GetBlockNodesRequest) returns (GetBlockNodesResponse);
}

// Container for metadata operations
message MetaCmd {
  oneof op {
    Mkdir   mkdir   = 1;
    Load    load    = 2;
    Mount   mount   = 3;
    Unmount unmount = 4;
    PutFileMeta put_file_meta = 5;
    PutPathConf put_path_conf = 9;

    // ---- Block Node Management Command ----
    AddBlockNode add_block_node = 6;
    RemoveBlockNode remove_block_node = 7;
    UpdateBlockNodeStatus update_block_node_status = 8;

    // ---- Cache Metadata Management Command ----
    PutBlockMeta put_block_meta = 20;
  }
}

message Mkdir  {
  string full_path = 1;
  uint64 inode = 2;
}

message Load   {
  string full_path = 1;
  uint64 inode = 2;
}

message Mount  {
  string full_path = 1;
  UfsConfig ufs_config = 2;
  string description = 3;
}

message Unmount{
  string full_path = 1;
}

message PutFileMeta {
  string full_path = 1;
  FileMetadata file_metadata = 2;
}

message PutPathConf {
  string full_path = 1;
  map<string, string> conf = 2;
}

message GetLeaderRequest {
}

message GetLeaderResponse {
  uint64 leader_id = 1;
  uint64 term      = 2;
  string leader_ip = 3;
}

// -----------------------------
// Unified UFS config
// -----------------------------
message UfsConfig {
  oneof config {
    S3Config    s3    = 1;
    GcsConfig   gcs   = 2;
    AzureConfig azure = 3;
    LocalConfig local = 4;
    MemoryConfig memory = 5;
  }
}

// AWS S3
message S3Config {
  string bucket = 1;
  string region = 2;
  string access_key_id = 3;
  string secret_access_key = 4;
  string endpoint = 5;
}

// Google Cloud Storage
message GcsConfig {
  string bucket = 1;
  string service_account_path = 2;
}

// Azure Blob
message AzureConfig {
  string container = 1;
  string account = 2;
  string access_key = 3;
}

// Local FS
message LocalConfig {
  string root_path = 1;
}

// Memory (no configs)
message MemoryConfig {}

// -----------------------------
// FileMetadata
// -----------------------------
enum FileType {
  FILE_TYPE_UNSPECIFIED = 0;
  FILE = 1;
  DIRECTORY = 2;
}

message FileMetadata {
  // Unique file ID (UUID)
  string id = 1;
  // File path
  string path = 2;
  // File type
  FileType file_type = 3;
  // File size in bytes
  uint64 size = 4;
  // Creation time
  google.protobuf.Timestamp created_at = 5;
  // Last modification time
  google.protobuf.Timestamp modified_at = 6;
  // Parent directory ID (None for root)
  string parent_id = 7;
  // UFS path (actual object storage path)
  string ufs_path = 8;
  // List of data blocks
  repeated BlockDesc blocks = 9;
}

message BlockDesc {
  uint64 index = 1;
  uint32 size = 2;
  uint64 range_start = 3;
  uint64 range_end = 4;
}

message PathConf {
  string full_path = 1;
  map<string, string> conf = 2;
}


// -----------------------------
// Read API
// -----------------------------

// Getfile metadata by full path
message GetFileMetaRequest {
  string full_path = 1;
}

message GetFileMetaResponse {
  // If not found, either return an empty response or an RPC error, depending on implementation
  FileMetadata metadata = 1;
}

// Get list of metadata under a directory
message ListChildrenRequest {
  string parent_id = 1;
}

message ListChildrenResponse {
  // Metadata of immediate child elements (files/directories)
  repeated FileMetadata children = 1;
}


// -----------------------------
// Cache Node Management Messages
// -----------------------------
message AddBlockNode {
  BlockNodeInfo node = 1;
}

message RemoveBlockNode {
  string node_id = 1;
}

message UpdateBlockNodeStatus {
  string node_id = 1;
  BlockNodeStatus status = 2;
  google.protobuf.Timestamp last_heartbeat = 3;
}

enum BlockNodeStatus {
  BLOCK_NODE_STATUS_UNSPECIFIED = 0;
  BLOCK_NODE_UP       = 1; // healthy
  BLOCK_NODE_DRAINING = 2; // not accepting new requests, draining existing ones
  BLOCK_NODE_DOWN     = 3; // considered dead
}

message BlockNodeInfo {
  // Node ID (can be UUID or simple sequence number)
  string node_id = 1;
  // Network location
  string url = 2;

  // Load balancing weight (optional)
  uint32 weight = 3;

  BlockNodeStatus status = 4;

  // Management metadata
  google.protobuf.Timestamp last_heartbeat = 5;
  string zone = 6; // AZ or DC information (if any)
  string description = 7;
}

message GetBlockNodesRequest {
}
message GetBlockNodesResponse {
  repeated BlockNodeInfo nodes = 1;
}

// -----------------------------
// Cache Metadata Management Messages
// -----------------------------
message PutBlockMeta {
  string file_id = 1;
  uint64 index = 2;
  string node_id = 3;
}



// -----------------------------
// MetadataService for Client
// -----------------------------
service MetadataService {
  /// Retrieves file metadata by its path.
  rpc Get(GetRequest) returns (GetResponse);
  /// Retrieves file metadata by its unique identifier.
  rpc GetById(GetByIdRequest) returns (GetByIdResponse);
  /// Stores or updates file metadata.
  rpc Put(PutRequest) returns (PutResponse);
  /// Deletes file metadata by its path.
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  /// List Children metadata under a directory
  rpc ListChildren(ListChildrenRequest) returns (ListChildrenResponse);

  /// Mount management
  rpc PutMount(PutMountRequest) returns (PutMountResponse);
  /// Get mount info by path
  rpc GetMount(GetMountRequest) returns (GetMountResponse);
  /// Delete mount by path
  rpc DeleteMount(DeleteMountRequest) returns (DeleteMountResponse);
  /// List all mounts
  rpc ListMounts(ListMountsRequest) returns (ListMountsResponse);

  /// Block node management
  rpc ListBlockNodes(ListBlockNodesRequest) returns (ListBlockNodesResponse);

  /// Path conf management
  rpc SetPathConf(SetPathConfRequest) returns (SetPathConfResponse);
  rpc GetPathConf(GetPathConfRequest) returns (GetPathConfResponse);
}

message GetRequest { string path = 1; }
message GetResponse { FileMetadata metadata = 1; bool found = 2; }

message GetByIdRequest { string id = 1; }
message GetByIdResponse { FileMetadata metadata = 1; bool found = 2; }

message PutRequest { FileMetadata metadata = 1; }
message PutResponse {
  bool created = 1; // create or update
}
message DeleteRequest { string path = 1; }
message DeleteResponse {
  bool deleted = 1;
}
message PutMountRequest { Mount mount = 1; }
message PutMountResponse {
  bool created = 1; // create or update
}
message GetMountRequest { string path = 1; }
message GetMountResponse { Mount mount = 1; bool found = 2; }
message DeleteMountRequest { string path = 1; }
message DeleteMountResponse {
  bool deleted = 1;
}
message ListMountsRequest {}
message ListMountsResponse { repeated Mount mounts = 1; }

// ---- BlockPlacementService ----
message ListBlockNodesRequest {}
message ListBlockNodesResponse {
  repeated BlockNodeInfo nodes = 1;
}

message SetPathConfRequest { PathConf conf = 1; }
message SetPathConfResponse { bool created = 1; }
message GetPathConfRequest { string path = 1; }
message GetPathConfResponse { PathConf conf = 1; bool found = 2; }
